[gd_scene load_steps=3 format=3 uid="uid://dgiygx4ouqqsm"]

[ext_resource type="Script" path="res://game/entities/bumper.gd" id="1_eu2y3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_syv4f"]
size = Vector2(166, 12.5)

[node name="Bumper" type="Node"]
script = ExtResource("1_eu2y3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_syv4f")
debug_color = Color(0.996078, 0, 0.219608, 1)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
